update website w/ almira's changes

--- a/index.html
+++ b/index.html
@@ -153,9 +153,7 @@ h4 {
 </style>
 
 
-
 <title>Friends of DxE</title>
-
 
 
 <div class="site-wrapper">
@@ -169,17 +167,18 @@ h4 {
           <h1>Friends of DxE</h1>
           <br />
           <h2>About Us</h2>
-      		<p>Friends of DxE (EIN 46-4318107), a 501(c)(3) tax exempt organization, provides grants for the grassroots Direct Action Everywhere (DxE) network, an international coalition of animal rights activists that has mobilized activists in over 180 cities and 34 countries, and for other animal advocacy organizations and projects.</p>
+      		<p>Friends of DxE (EIN 46-4318107), a 501(c)(3) tax exempt organization, provides grants for the grassroots Direct Action Everywhere (DxE) network and for other animal advocacy organizations and projects.</p>
 
-      		<h2>Reimbursements</h2>
-      		<p>Please submit requests for funds using the form below. Note that Friends of DxE only supports projects that fit our funding criteria. and that fulfill a tax exempt purpose. See our values <a href="#" onclick="showPrinciples()">here.</a></p>
+      		<h2>Grants</h2>
+      		<p>Please submit requests for funds using the form below. Note that Friends of DxE only supports projects that fit our funding criteria and that fulfill a tax exempt purpose. See our values <a href="#" onclick="showPrinciples()">here.</a></p>
 
       		<h2>Fellowships</h2>
-      		<p>Fellowship applications are being accepted now until February 1, 2019.<br />
+      		<p>Fellowship applications are being accepted now until March 1, 2020.<br />
       		Find out more about the fellowship process <a href="#" onclick="showFellowships()">here</a>.</p>
 
       		<h2>Donations</h2>
       		<p>You can donate via <a href="#open-funraise">Funraise</a> or check, payable to Friends of DxE, to: <br />Friends of DxE<br />PMB 328<br />2425 Channing Way, Ste. B<br />Berkeley, CA 94704</p>
+          <p>To see Friends of DxE's audited financial report and 990 form, please email <a href="mailto:info@friendsofdxe.com">info@friendsofdxe.com</a></p>
 
           <br />
           <div class="row">
@@ -205,13 +204,13 @@ h4 {
           <p>Friends of DxE awards fellowships to a small number of activist fellows each year. In order to receive a fellowship, one must meet the following criteria:</p>
           <ul>
           <li>At least 6 months organizing or working group participation.</li>
-          <li>Highest demonstration of character and DxE Values.</li>
+          <li>Highest demonstration of character and DxE values.</li>
           <li>Application and approval by DxE Fellowship Committee, DxE Steering Committee, or similar advisory body, including: 
           <ul><li>Description of your activism.</li>
           <li>Description of primary impacts.</li>
           <li>Requested fund amounts.</li>
           </ul></li>
-          <li>Recommendation by DxE Fellowship Committee, DxE Steering Committee, or similarly credible body
+          <li>Recommendation by DxE Fellowship Committee, DxE Steering Committee, or similarly credible body.
           </ul>
           <p><center>IF YOU MEET ALL OF THESE CRITERIA, YOU CAN FILL OUT <a href="https://docs.google.com/forms/d/e/1FAIpQLScqcbAwP7PHtcUmRRVnmg05eAoKe90qj6OPJzk5kVegKB6ZwA/viewform?usp=sf_link" target="_blank">THIS FORM</a> TO APPLY FOR A FELLOWSHIP.</center></p>
       
@@ -307,5 +306,3 @@ h4 {
   </div>
 
 </div>
-
-
