--- a/index.html
+++ b/index.html
@@ -281,23 +281,32 @@ h4 {
 
     			<h2>We are fiercely nonviolent.</h2>
 
-    			<p>We directly challenge systems of oppression with the power of nonviolence. We have empathy for the individuals caught up in violent systems, seeking to bring them to the side of truth and justice. We accept suffering without retaliation for the sake of the cause. Even when tested, we respond nonviolently in act, word, and tone.</p>
+    			<p>We directly challenge systems of oppression with the power of nonviolence.
+          We have empathy for the individuals caught up in violent systems, seeking to bring them to the side of justice.
+          We accept suffering without retaliation for the sake of the cause. Even when tested, we respond nonviolently with
+          our actions and words.</p>
 
     			<h2>We build purposeful communities.</h2>
 
-    			<p>We foster inclusive communities that empower, support and build up fellow activists. It is everyone's responsibility to treat each person in our community with warmth and respect. We assume good faith, don't gossip, and call each other in, not out. Our community is the foundation on which the movement will grow. We encourage ordinary people to become the best activists they can be through training, mentorship, and support.</p>
+    			<p>We foster inclusive communities that empower, support, and build up fellow activists. It is everyone's responsibility to create a welcoming environment and treat each person in our communities with respect. 
+          We don't gossip and we assume good faith. We hold each other accountable and help each other grow by calling each other in, not out, only resorting to public statements about individuals when necessary for community safety and transparency. 
+          Our community is the foundation on which the movement will grow.
+          We encourage ordinary people to become the best activists they can be through training, mentorship, support, and opportunity.</p>
 
     			<h2>We do our homework.</h2>
 
-    			<p>We draw on the best available evidence, from academia and beyond, to inform our activism. We seek diverse perspectives and also look outside the animal rights movement for lessons and inspiration. We measure and react. We're willing to innovate, experiment, take calculated risks, and fail; and we're eager to adapt and shift course based on outcomes.</p>
+    			<p>We draw on the best available evidence, from academia and beyond, to inform our activism.
+          We seek diverse perspectives and also look outside the animal rights movement for lessons and inspiration.
+          We measure and react. We're willing to innovate, experiment, take calculated risks, and fail; and we're eager to adapt and shift course based on outcomes.</p>
 
     			<h2>We lead by serving.</h2>
 
-    			<p>We create power for the movement by empowering the people around us. Our leadership team is first in line when a sacrifice is necessary. Ultimately, we are all serving the animals and the movement.</p>
+    			<p>We create power for the movement by empowering the people around us. Our leadership team is first in line when a sacrifice is necessary. Ultimately, we are all serving animals and the movement.</p>
 
     			<h2>We aim to do exceptional work for the animals.</h2>
 
-    			<p>Our actions reflect the seriousness and urgency of our cause. Animal liberation is not a hobby; it's a social justice movement. We set clear goals and metrics and develop plans to achieve them. We are absurdly dependable, hold each other accountable, and get things done on time and to the best of our ability. We constantly seek feedback, commit to continuous learning, and respond to criticism with humility and grace. We believe in the duty to disagree, but we maintain compassion even when we disagree. We are radically candid.</p>
+    			<p>Our actions reflect the seriousness and urgency of our cause. Animal rights is a social justice movement, not a hobby. We set clear goals and metrics and develop plans to achieve them. We are dependable, hold each other accountable, and get things done on time and to the best of our ability.
+          We seek feedback, commit to continuous learning, and respond to criticism with humility and grace. We believe in the duty to disagree, but we maintain compassion even when we disagree. We are radically candid.</p>
 
         </div>
 
